Add slideShow.js to auto show
See: #10

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 	<div class="container">
 		<nav class="card__container">
-			<figure class="card" id="start-card">
+			<figure class="card active" id="start-card">
 				<img src="images/f1.jpg" alt="" />
 				<figcaption class="card__caption">
 					Lorem ipsum dolor sit amet.
@@ -28,7 +28,7 @@
 				<img src="images/f3.jpg" alt="" />
 				<figcaption class="card__caption">Lorem ipsum dolor sit.</figcaption>
 			</figure>
-			<figure class="card">
+			<!-- <figure class="card">
 				<img src="images/f4.jpg" alt="" />
 				<figcaption class="card__caption">
 					Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sit,
@@ -87,7 +87,7 @@
 				<figcaption class="card__caption">
 					Lorem ipsum dolor sit amet consectetur.
 				</figcaption>
-			</figure>
+			</figure> -->
 		</nav>
 		<div class="card__btn__container">
 			<a class="card__btn" href="#start-card">First</a>
